# ExpendiTUI

./: LICENSE  README.md  TERMINOLOGY.md  pyproject.toml
.github/workflows/: ci.yml
src/expenditui/: __init__.py  app.py  app_state.py  constants.py  filtering.py  models.py  settings_data.py  storage.py  tags.py  theme.py  theme_css.py  visualization.py
src/expenditui/screens/: edit.py  help.py  helpers.py  overview.py  settings.py
src/recurring_expenses_tui/: __init__.py  app.py  calculations.py  constants.py  models.py  storage.py  theme.py
src/recurring_expenses_tui/screens/: __init__.py  edit.py  help.py  overview.py
tests/: test_app_navigation.py  test_calculations.py  test_edit_pane.py  test_filtering.py  test_models.py  test_overview_pane.py  test_settings_data.py  test_settings_pane.py  test_storage.py  test_theme.py  test_visualization.py
