[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recurring-expenses-tui"
version = "0.1.0"
description = "A Textual TUI for tracking recurring personal expenses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "platformdirs>=4.2.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "textual>=0.58.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
recurring-expenses-tui = "recurring_expenses_tui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
