[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expenditui"
version = "0.1.0"
description = "ExpendiTUI is a Textual TUI for tracking recurring expenses and income."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "platformdirs>=4.2.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "textual>=0.58.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.2.0",
]

[project.scripts]
expenditui = "expenditui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]

[tool.setuptools.packages.find]
where = ["src"]
